# fhx_manager

./: .Makefile.swp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README.txt  benq.h  build.bat  cmake_install.cmake  comms.cpp  comms.h  controller.cpp  controller.h  dali.cpp  dali.h  easing.h  fhx_manager  led_strip.cpp  led_strip.h  main.cpp  todo.txt  ynca.cpp  ynca.h
dali examples/: ALL_Discover.py
doc/ti code/: Dali_HPA338.c  command.c  command.h  dali.c  dali.h  dali_demo_hw.h  dali_infod_default.asm  dali_infod_default.c  special_command.c  special_command.h
include/: benq.h  commands.h  comms.h  controller.h  dali.h  easing.h  ir.h  ircc.h  led_strip.h  script.h  ynca.h
ir codes/: dh_660hd.lircd.conf  dh_660hd.lircd.conf.orig  dh_660hd.lircd.conf.with_epg  irrecord-tmp-9Kuix3  notes.txt
ir codes/dilog/: DC660HD.lircd.conf  notes.txt  yamaha.lircd.conf
ircc_test/: ircc_test
ircc_test/include/: encode.h  ircc.h
ircc_test/src/: Makefile  cencode.cpp  main.cpp
multithreadsockets/: main.cpp
php/: bd_page.php  color.php  commands.php  comms.php  comms_test.php  confirm_system_off.php  confirm_system_on.php  dilog.css  dilog_page1.php  dilog_page2.php  feature_show.php  fhx_manager.css  index.php  light.php  script.php  test.php  test2.php  volume.php
src/: Makefile  benq.cpp  commands.cpp  comms.cpp  controller.cpp  easing.cpp  ir.cpp  ircc.cpp  irsend.cpp  led_strip.cpp  main.cpp  script.cpp  test_script  ynca.cpp
utility/: copy_html_files.sh
ynca_test/: build.bat  comms.cpp  comms.h  main.cpp  ynca.cpp  ynca.h
(+3 files in other folders)
